# VadymCode

./: README.MD
DPGA/: .directory  CMakeLists.txt  ProcessData.cxx  README  debug.mac  init_vis.mac  init_vis.macLx2310.new  main_DPGA.cc  my_run.mac  run1.mac  run2.mac  run3.mac  run4.mac  run_LYSO.mac  run_LYSO_Na22.mac  run_Medicyc.mac  run_Medicyc_Scoring.mac  run_XEMIS_Hadron.mac  run_mar.mac  vis.mac
DPGA/include/: ActionInitialization.hh  DPGACrystalHit.hh  DPGACrystalSD.hh  DPGAPatientHit.hh  DPGAPatientSD.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  EventActionMessenger.hh  Particles.hh  PhysListHadron.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  StepMax.hh  StepMaxMessenger.hh  UserScoreWriter.hh
DPGA/src/: ActionInitialization.cc  DPGACrystalHit.cc  DPGACrystalSD.cc  DPGAPatientHit.cc  DPGAPatientSD.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  EventActionMessenger.cc  MagneticField.cc  Particles.cc  PhysListHadron.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  StepMax.cc  StepMaxMessenger.cc  UserScoreWriter.cc
lyso-crystal/: .directory  .gitignore  CMakeLists.txt  README.MD  exampleB3a.cc  processData.cxx  run1.mac  run2.mac
lyso-crystal/include/: B3DetectorConstruction.hh  B3aEventAction.hh  B3aRunAction.hh  CathodeHit.hh  CathodeSD.hh  TrackerHit.hh  TrackerSD.hh
lyso-crystal/src/: B3DetectorConstruction.cc  B3PhysicsList.cc  B3PrimaryGeneratorAction.cc  B3aActionInitialization.cc  B3aEventAction.cc  B3aRunAction.cc  CathodeHit.cc  CathodeSD.cc  TrackerHit.cc  TrackerSD.cc
